[package]
name = "blog"
version = "0.2.0"
edition = "2021"

[lib]
name = "blog"
path = "src/lib/lib.rs"

[[bin]]
name = "blog_server"
path = "src/bin/blog_server/main.rs"

[[bin]]
name = "css_gen"
path = "src/bin/css_gen/main.rs"

[[bin]]
name = "prepublish"
path = "src/bin/prepublish/main.rs"

[dependencies]
libshire = { git = "https://github.com/pantonshire/libshire", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
hyper = "0.14"
axum = "0.5"
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.3", features = ["fs", "trace"] }
mime = "0.3"
maud = "0.23"
atom_syndication = "0.11"
rss = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
pulldown-cmark = "0.9"
syntect = "4"
notify = "4"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
