[package]
name = "blog_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# My own utilities library
libshire = { git = "https://github.com/pantonshire/libshire" }
# Async runtime for Axum
tokio = { version = "1", features = ["full"] }
# Web server framework
axum = "0.5"
# Middleware for the web server
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.3", features = ["fs", "trace"] }
# Compile-time HTTP templating
maud = "0.23"
# Serialisation for RSS and Atom
atom_syndication = "0.11"
rss = "2"
# KDL parsing
knuffel = "2"
# CommonMark parsing
pulldown-cmark = "0.9"
# Syntax highlighting
syntect = "4"
# Filesystem event watcher
notify = "4"
# Time library
chrono = "0.4"
# Logging for observability
tracing = "0.1"
tracing-subscriber = "0.3"
# Pretty errors
miette = { version = "4", features = ["fancy"] }
